# Alicia-Inference-SDK

./: .gitignore  INFERENCE_API_GUIDE.md  README.md  README.zh-CN.md  pyproject.toml  requirements-api.txt
.cache/huggingface/datasets/parquet/default-2c233f388cd870dd/0.0.0/ec3958b52035e87929642b609b5a781870321434b151a14fbe8fd5a26ff494bb/: dataset_info.json  parquet-train.arrow
examples/: README.md  README.zh-CN.md  _shared.py  act.py  act_alicia_m_real_robot.py  api_usage.py  pi0.py  smolvla.py  validate_dataset_inference.md  validate_dataset_inference.py
examples/act/: 01_load_and_inspect_act.py  02_synthetic_control_loop_act.py  03_manual_lifecycle_act.py  README.md
examples/common/: 00_quickstart_dummy_policy.py  01_load_and_inspect_policy.py  02_synthetic_control_loop.py  03_manual_policy_lifecycle.py  README.md  __init__.py  _demo_utils.py  _real_policy_demo.py
examples/pi0/: 01_load_and_inspect_pi0.py  02_synthetic_control_loop_pi0.py  03_manual_lifecycle_pi0.py  README.md
examples/smolvla/: 01_load_and_inspect_smolvla.py  02_synthetic_control_loop_smolvla.py  03_manual_lifecycle_smolvla.py  README.md
inference_sdk/: __init__.py  _bootstrap.py  act.py  api.py  base.py  factory.py  pi0.py  session.py  smolvla.py
inference_sdk/core/: __init__.py  config.py  exceptions.py  types.py
inference_sdk/policy/: __init__.py  act.py  pi0.py  robot_adapter.py  smolvla.py
inference_sdk/runtime/: __init__.py  base.py  device.py  monitoring.py
