[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alicia-inference-sdk"
version = "0.1.0"
description = "Reusable policy inference SDK for ACT, PI0 and SmolVLA models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "pyyaml",
]

[project.optional-dependencies]
act = [
    "draccus==0.10.0",
    "omegaconf",
    "torch",
    "torchvision",
    "einops",
    "safetensors",
    "huggingface-hub",
    "packaging",
]
pi0 = [
    "torch",
    "transformers",
    "safetensors",
]
smolvla = [
    "torch",
    "transformers",
    "safetensors",
]
all = [
    "draccus==0.10.0",
    "omegaconf",
    "torch",
    "torchvision",
    "einops",
    "transformers",
    "safetensors",
    "huggingface-hub",
    "packaging",
]

[tool.setuptools]
packages = ["inference_sdk"]
